tests/predator-regre/test-0197.err
test-0197.c:25: note: writing heap graph to '00-before-memset-0000.dot'...
test-0197.c:27: error: dereferencing object of size 4097B out of bounds
test-0197.c:27: note: the target object ends 1B beyond a heap object of size 4096B
test-0197.c:103: note: from call of do_memset()
test-0197.c:33: note: from call of main()
test-0197.c:25: note: writing heap graph to '00-before-memset-0001.dot'...
test-0197.c:27: error: dereferencing object of size 4096B out of bounds
test-0197.c:27: note: the pointer being dereferenced points 1B above a heap object of size 4096B
test-0197.c:94: note: from call of do_memset()
test-0197.c:33: note: from call of main()
test-0197.c:25: note: writing heap graph to '00-before-memset-0002.dot'...
test-0197.c:27: error: dereferencing object of size 4097B out of bounds
test-0197.c:27: note: the target object ends 1B beyond a heap object of size 4096B
test-0197.c:85: note: from call of do_memset()
test-0197.c:33: note: from call of main()
test-0197.c:25: note: writing heap graph to '00-before-memset-0003.dot'...
test-0197.c:27: error: dereferencing object of size 4096B out of bounds
test-0197.c:27: note: the pointer being dereferenced points 1B above a heap object of size 4096B
test-0197.c:76: note: from call of do_memset()
test-0197.c:33: note: from call of main()
test-0197.c:25: note: writing heap graph to '00-before-memset-0004.dot'...
test-0197.c:28: note: writing heap graph to '01-after-memset-0000.dot'...
test-0197.c:117: note: writing heap graph to 'end-of-main-reached-0000.dot'...
test-0197.c:117: warning: memory leak detected while destroying a variable on stack
test-0197.c:116: error: ___sl_error() reached, analysis of this code path will not continue
test-0197.c:116: note: user message: assertion failed: !ptr[N - sizeof(double)]
test-0197.c:25: note: writing heap graph to '00-before-memset-0005.dot'...
test-0197.c:28: note: writing heap graph to '01-after-memset-0001.dot'...
test-0197.c:117: note: writing heap graph to 'end-of-main-reached-0001.dot'...
test-0197.c:117: warning: memory leak detected while destroying a variable on stack
test-0197.c:115: error: ___sl_error() reached, analysis of this code path will not continue
test-0197.c:115: note: user message: assertion failed: !ptr[sizeof(double) - 1]
test-0197.c:25: note: writing heap graph to '00-before-memset-0006.dot'...
test-0197.c:28: note: writing heap graph to '01-after-memset-0002.dot'...
test-0197.c:117: note: writing heap graph to 'end-of-main-reached-0002.dot'...
test-0197.c:117: warning: memory leak detected while destroying a variable on stack
test-0197.c:25: note: writing heap graph to '00-before-memset-0007.dot'...
test-0197.c:28: note: writing heap graph to '01-after-memset-0003.dot'...
test-0197.c:117: note: writing heap graph to 'end-of-main-reached-0003.dot'...
test-0197.c:117: warning: memory leak detected while destroying a variable on stack
